Fix: Header Open Sidebar Section Small Screens Bug

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -458,6 +458,7 @@
       background-color: $tertiary-background-color;
       color: $primary-text-color;
       border: none;
+      white-space: nowrap;
       cursor: pointer;
 
       img {
